# uc-sony

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  SETUP.md  build.sh  driver.json  driver.spec  package.sh  pyproject.toml  requirements.txt  start.sh  test-requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  python-check.yml
docs/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_DEVELOPMENT_GUIDE.md  QUICKSTART.md  TESTING.md
docs/reference/: API_REFERENCE.md  DISCOVERY_SUMMARY.md  SOLUTION.md  sony_audio_control_api_summary.md
src/: __init__.py  config.py  discovery.py  driver.py  remote_entity.py  settings_cache.py  sony_client.py
