[project]
name = "uc-sony"
version = "0.1.0"
description = "Unfolded Circle Remote integration for Sony Audio Control API"
requires-python = ">=3.10"
dependencies = ["ucapi>=0.3.0", "aiohttp>=3.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
